--- a/pom.xml
+++ b/pom.xml
@@ -24,26 +24,18 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-core_2.10</artifactId>
-			<version>1.5.0</version>
+			<artifactId>spark-core_2.11</artifactId>
+			<version>2.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-mllib_2.10</artifactId>
-			<version>1.5.0</version>
+			<artifactId>spark-mllib_2.11</artifactId>
+			<version>2.0.0</version>
 		</dependency>
-
-		<!-- <dependency> -->
-		<!-- <groupId>spark</groupId> -->
-		<!-- <artifactId>spark</artifactId> -->
-		<!-- <version>1.2.0</version> -->
-		<!-- <scope>system</scope> -->
-		<!-- <systemPath>${basedir}/lib/spark-assembly-1.2.0-hadoop2.2.0.jar</systemPath> -->
-		<!-- </dependency> -->
 		<dependency>
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scala-library</artifactId>
-			<version>2.10.5</version>
+			<version>2.11.8</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -53,7 +45,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<sourceDirectory>${basedir}/src</sourceDirectory>
+<!-- 		<sourceDirectory>${basedir}/src</sourceDirectory> -->
 		<plugins>
 			<!-- <plugin> -->
 			<!-- <groupId>org.apache.maven.plugins</groupId> -->
